--- a/Web Creations By Jay/index.html
+++ b/Web Creations By Jay/index.html
@@ -1198,7 +1198,7 @@
                     </div>
                 </div>
                 <div class="portfolio-item">
-                    <img src="images/Job Posting website.png" alt="Project 4" class="portfolio-image">
+                    <img src="images/Job Posting Website.png" alt="Project 4" class="portfolio-image">
                     <div class="portfolio-overlay">
                         <h3>Job Posting Website</h3>
                         <p>A fully responsive job posting website with an admin dashboard for Job Management</p>
